added the table and firebase is taking inputs

--- a/index.html
+++ b/index.html
@@ -16,40 +16,61 @@
         <div class="jumbotron text-center">
             <h1>Anytime is Train Time</h1>
             <h6>Cha Cha Chug Chug</h6>
+        </div>
 
-        </div>
-        <div class="card">
-            <div class="card-header">
-                Current Train Schedule
-            </div>
-            <div class="card-body">
-                <p class="card-text">
-                    with support text below
-                </p>
-            </div>
-        </div>
+        <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">Train Name</th>
+      <th scope="col">Destination</th>
+      <th scope="col">Frequency</th>
+      <th scope="col">Next Arrival</th>
+      <th scope="col">Minutes</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
+
+
+
         <br>
-
-        <div class="card">
+    <form class="form-group" id="inpForm">
             <div class="card-header">
                 Add Train
             </div>
 
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="Tname">Train Name</span>
+                    <span class="input-group-text">Train Name</span>
                 </div>
-                <input type="text" class="form-control">
+                <input type="text" id="tName" class="form-control">
             </div>
-
 
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="dest">Destination</span>
+                    <span class="input-group-text" >Destination</span>
                 </div>
-                <input type="text" class="form-control">
+                <input type="text" id="dest" class="form-control">
             </div>
-
 
             <div class="input-group mb-2">
                 <div class="input-group-prepend">
@@ -57,7 +78,7 @@
                 </div>
                 <div class="form-group ml-2 mr-2 text-center">
                     <label for="exampleFormControlSelect1 ">HH</label>
-                    <select class="form-control" id="mTime">
+                    <select class="form-control" id="hTime">
                         <option>00</option>
                         <option>01</option>
                         <option>02</option>
@@ -87,44 +108,15 @@
 
                 <div class="form-group mb-4  text-center">
                     <label for="exampleFormControlSelect1 ml-2"> MM</label>
-                    <select class="form-control  mr-5" id="exampleFormControlSelect1">
+                    <select class="form-control  mr-5" id="mTime">
                         <option>00</option>
-                        <option>01</option>
-                        <option>02</option>
-                        <option>03</option>
-                        <option>04</option>
-                        <option>05</option>
-                        <option>06</option>
-                        <option>07</option>
-                        <option>08</option>
-                        <option>09</option>
-                        <option>10</option>
-                        <option>11</option>
-                        <option>12</option>
-                        <option>13</option>
-                        <option>14</option>
-                        <option>15</option>
-                        <option>16</option>
-                        <option>17</option>
-                        <option>18</option>
-                        <option>19</option>
-                        <option>20</option>
-                        <option>21</option>
-                        <option>22</option>
-                        <option>23</option>
-                        <option>24</option>
-                        <option>25</option>
-                        <option>26</option>
-                        <option>27</option>
-                        <option>28</option>
-                        <option>29</option>
-                        <option>30</option>
-                        <option>31</option>
-                        <option>32</option>
-                        <option>33</option>
-                        <option>34</option>
-                        <option>35</option>
-                        <option>36</option>
+                        <option>01</option>    <option>02</option> <option>03</option> <option>04</option>
+                    <option>05</option> <option>06</option> <option>07</option><option>08</option><option>09</option> <option>10</option>
+                        <option>11</option><option>12</option> <option>13</option> <option>14</option><option>15</option> <option>16</option> <option>17</option>
+                         <option>18</option><option>19</option> <option>20</option>  <option>21</option><option>22</option>
+                        <option>23</option><option>24</option> <option>25</option><option>26</option><option>27</option> <option>28</option>
+                        <option>29</option><option>30</option><option>31</option><option>32</option><option>33</option>
+                        <option>34</option><option>35</option><option>36</option>
                         <option>37</option>
                         <option>38</option>
                         <option>39</option>
@@ -148,21 +140,20 @@
                         <option>57</option>
                         <option>58</option>
                         <option>59</option>
-
                     </select>
                 </div>
             </div>
 
             <div class="input-group">
                 <div class="input-group-prepend">
-                    <span class="input-group-text" id="">Frequency (min)</span>
+                    <span class="input-group-text" >Frequency (min)</span>
                 </div>
-                <input type="text" class="form-control">
-            </div>
-            <button type="submit" id="#butt" class="btn btn-outline-primary mt-3">SUBMIT</button>
+                <input type="text" class="form-control" id="freq">
+            </div>    
+            <button type="submit" id="btn" form="inpForm" class="btn btn-outline-primary mt-3">SUBMIT</button>
+    </form>
+     </div>
 
-        </div>
-    </div>
 
 
 
