added some styling

--- a/index.html
+++ b/index.html
@@ -28,25 +28,8 @@
       <th scope="col">Minutes</th>
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>Larry</td>
-      <td>the Bird</td>
-      <td>@twitter</td>
-    </tr>
+  <tbody id="tb">
+   
   </tbody>
 </table>
 
@@ -157,7 +140,7 @@
 
 
 
-
+    <script>src"https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/locale/af.js"</script>
     <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="script.js"></script>
